sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:27: error: not found: value igap
      copy(indSorted-igap*,indSorted-gap*i+1);
                     ^